force-app/main/default/objects/ARF_DTF__c/ARF_DTF__c.object-meta.xml
<CustomObject>
    <label>ARF - DTF</label>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>Art Request Form  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ARF - DTF</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>