force-app/main/default/objects/ARF_DTF__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ARF - DTF</relationshipLabel>
    <relationshipName>ARF_DTF</relationshipName>
    <type>Lookup</type>
</CustomField>