force-app/main/default/objects/ARF_DTF__c/fields/Art_Type__c.field-meta.xml
<CustomField>
    <fullName>Art_Type__c</fullName>
    <label>Art Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PROJECT!!</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>