force-app/main/default/objects/ARF_DTF__c/fields/Op_ID__c.field-meta.xml
<CustomField>
    <fullName>Op_ID__c</fullName>
    <formula>Opportunity__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Op ID</label>
    <type>Text</type>
</CustomField>