force-app/main/default/objects/ARF_DTF__c/fields/Shirt_Color_ARF__c.field-meta.xml
<CustomField>
    <fullName>Shirt_Color_ARF__c</fullName>
    <label>Garment Color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>