force-app/main/default/objects/ARF_DTF__c/fields/Smallest_Size_being_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Smallest_Size_being_Ordered__c</fullName>
    <label>Smallest Size being Ordered?</label>
    <length>25</length>
    <type>Text</type>
</CustomField>