force-app/main/default/objects/ARF_DTF__c/fields/Stickers__c.field-meta.xml
<CustomField>
    <fullName>Stickers__c</fullName>
    <label>Stickers?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STICKERS ADD ON!!!!!</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>