force-app/main/default/objects/ARF_DTF__c/fields/Summary_of_Back_Location__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Back_Location__c</fullName>
    <label>Summary of Back Location</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>